testsuite/tests/grammar/invalid_token_literal/test.out
== foo.lkt ==
foo.lkt:9:9: error: '\n' token literal is not part of the valid tokens for this this grammar
9 |         "\n"
  |         ^^^^


lkt_compile: Done
